Adding basic BDD and mongo to dependencies, some folders.

--- a/jsl.conf
+++ b/jsl.conf
@@ -116,6 +116,7 @@
 +define module
 +define process
 +define console
++define exports
 
 ### JavaScript Version
 # To change the default JavaScript version:
