--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "name": "meetr",
   "version": "0.0.1",
-  "dependencies": { }
+  "dependencies": {
+     "mongoose": "2.5.6",
+     "vows": "*"
+  }
 }
