--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "dependencies": {
      "mongoose": "2.5.6",
-     "express": "*"
+     "express": "*",
      "vows": "*"
    }
 }
