Merging, and replacing python tests with api easy tests.

--- a/jsl.conf
+++ b/jsl.conf
@@ -118,6 +118,7 @@
 +define console
 +define __dirname
 +define exports
++define JSON
 
 ### JavaScript Version
 # To change the default JavaScript version:
