Adding resourceful activity test.

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
      "redis": "*",
      "express": "*",
      "vows": "*",
-     "api-easy": "*"
+     "api-easy": "*",
+     "resourceful": "*"
    }
 }
