Tweaking tests, removing last redis models.

--- a/jsl.conf
+++ b/jsl.conf
@@ -51,7 +51,7 @@
 +trailing_decimal_point       # trailing decimal point may indicate a number or an object member
 +undeclared_identifier        # undeclared identifier: {name}
 +unreachable_code             # unreachable code
-+unreferenced_argument        # argument declared but never referenced: {name}
+-unreferenced_argument        # argument declared but never referenced: {name}
 +unreferenced_function        # function is declared but never referenced: {name}
 +unreferenced_variable        # variable is declared but never referenced: {name}
 +unsupported_version          # JavaScript {version} is not supported
